[package]
name = "leetcode-rust"
version = "0.1.0"
authors = ["alei <rayingecho@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.6.5"
regex = "1.3.4"
futures = { version = "0.3.3", features = ["thread-pool"] }
surf = "1.0.3"

[lib]
doctest = false
test = true
